# BackupRestoreSolution

./: .gitignore  BACKUPWINDOW_CRASH_FIX.md  BUILD_DEPLOYMENT.md  BUILD_ERROR_FIXED.md  BackupRestoreSolution.sln  COMPLETE_SUMMARY.md  DISK_VOLUME_MAPPING_FIX.md  DLL_LOADING_FIX.md  FILES_CREATED_SUMMARY.md  FINAL_QUICK_START.md  FIX_BACKUPENGINE_PROJECT.md  FIX_CPP_PROJECT.md  FIX_WINDOWS_BUILD.md  Fix-BackupEngineProject.ps1  IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  LINUX_USB_COMPLETE.md  QUICK_START_GUIDE.md  README.md  TREEVIEW_DEBUGGING.md  UpgradeLog.htm  VERSION_3.0.0.1_SUMMARY.md  VERSION_3.3.0_CHANGES.md  VERSION_4.4.0_IMPLEMENTATION.md  VERSION_4.5.0_COMPLETE.md  VERSION_4.6.0_RESTORE_COMPLETE.md  WINDOWS_BUILD_GUIDE.md
BackupEngine/: BackupEngine.cpp  BackupEngine.h  BackupEngine.vcxproj  BackupEngine_Exports.cpp  BackupFiles_Implementation.cpp  BackupInfo_Implementation.cpp  BackupManager_Advanced.cpp  BackupVerification.cpp  HyperVBackup.cpp  HyperVBackup_Implementation.cpp  HyperVManager.cpp  HyperVRestore.cpp  HyperV_Enumeration.cpp  RecoveryEnvironment.cpp  RestoreEngine.cpp  RestoreEngine_Advanced.cpp  SystemStateRestore.cpp  VSSManager.cpp  VolumeEnumeration.cpp
BackupService/: BackupExecutor.cs  BackupSchedulerService.cs  BackupService.csproj  JobManager.cs  Program.cs
BackupUI/: App.xaml  App.xaml.cs  BackupUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  VersionClass.cs  app.manifest
BackupUI/Models/: BackupJob.cs  BackupSchedule.cs  BackupTarget.cs  BackupType.cs  DriveTreeItem.cs  RestoreJob.cs
BackupUI/Properties/: launchSettings.json
BackupUI/Services/: BackupEngineInterop.cs  BackupServiceManager.cs  (+1 more)
LinuxRestore/: BUILD-AND-CREATE-ISO.ps1  CMakeLists.txt  README.md  create_bootable_usb.sh  restore_cli.cpp  restore_engine.cpp  restore_gui_gtk.cpp  restore_tui.cpp
RecoveryUI/: BackupUI.csproj  MainWindow.xaml
(+15 files in other folders)
